--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,16 +62,15 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2.5em 1em;
-}
-
-button {
-    padding: 1em 2.5em;
+    padding: 1em 2em;
     font-size: 1rem;
-    letter-spacing: 1px;
     color: #FFF;
     background-color: #a491d2;
-    border: none;
+    text-decoration: none;
+}
+
+.btn {
+    padding: 2em;
 }
 
 button:hover {
